# goit-data_science

./: hw1.ipynb  pyproject.toml
hw10/: hw10_1.ipynb  hw10_2.ipynb
hw11/: hw11.ipynb
hw12/: hw12.ipynb
hw2/: hw2_1.ipynb  hw2_2.ipynb  hw2_3.ipynb
hw3/: hw3.ipynb
hw4/: hw4.ipynb
hw5/: hw5.ipynb
hw6/: hw6.ipynb
hw7/: hw7.ipynb
hw8/: hw8.ipynb
hw9/: hw9.ipynb  hw9_1.ipynb
hw9/model/fashion_mnist/: oracle.json
hw9/model/fashion_mnist/trial_0000/: checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0001/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0002/: checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0003/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0004/: checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0005/: checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0006/: checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0007/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0008/: checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0009/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0010/: checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0011/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0012/: checkpoint.data-00000-of-00001  checkpoint.index  trial.json
hw9/model/fashion_mnist/trial_0013/: checkpoint.index  trial.json
(+40 files in other folders)
